Added SEO Stuffs

--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
-<!-- Required meta tags -->
-
+<!-- Bootstrap CSS -->
+<head>
 <meta charset="utf-8"></meta>
-
 <meta
   name="viewport"
   content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </meta>
-
-<!-- Bootstrap CSS -->
-<head>
-<title>QUANTA 2018</title>
 <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png?">
 <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png?">
 <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png?">
@@ -35,6 +30,13 @@
 </link>
 <link href="style.css" rel="stylesheet"></link>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+<!-- SEO Stuffs -->
+<meta name="description" content="Website resmi Quanta, angkatan ke 26 Fasilkom UI.">
+<title>QUANTA 2018</title>
+<meta name="robots" content="index,follow">
+<meta name="googlebot" content="index,follow">
+<meta name="keywords" content="Fasilkom,UI,UniversitasIndonesia,Universitas, Indonesia, Compfest, ICPC, Quanta, UIUX, IlmuKomputer">
+<meta name="google-site-verification" content="FV9juXoAuZnraXoVewuJNWki_taXfG-bHUKUvzTnnKo" />
 </head>
 <!-- Isinya -->
 <body class="animated fadeIn">
