--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 <link href="style.css" rel="stylesheet"></link>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 <!-- SEO Stuffs -->
-<meta name="description" content="Website resmi Quanta, angkatan ke 26 Fasilkom UI.">
+<meta name="description" content="Website resmi Quanta, angkatan 2018 Fakultas Ilmu Komputer, Universitas Indonesia.">
 <title>QUANTA 2018</title>
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
-<meta name="keywords" content="Fasilkom,UI,UniversitasIndonesia,Universitas, Indonesia, Compfest, ICPC, Quanta, UIUX, IlmuKomputer">
+<meta name="keywords" content="Fasilkom,UI,UniversitasIndonesia,Universitas, Indonesia, Compfest, ICPC, Quanta, UIUX, IlmuKomputer, Fasilkom UI, Ilmu Komputer, Sistem Informasi, Computers Get Together, Compfest X, Compfest 11, Universitas Indonesia, SBMPTN, SNMPTN, Makara, Bis Kuning, Competitive Programming, ICPC">
 <meta name="google-site-verification" content="FV9juXoAuZnraXoVewuJNWki_taXfG-bHUKUvzTnnKo" />
 </head>
 <!-- Isinya -->
