--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!-- Bootstrap CSS -->
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129042848-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-	  
+
     gtag('config', 'UA-129042848-1');
   </script>
 <meta charset="utf-8"></meta>
@@ -31,203 +29,34 @@
 <meta name="msapplication-TileColor" content="#ffffff?">
 <meta name="msapplication-TileImage" content="ms-icon-144x144.png?">
 <meta name="theme-color" content="#ffffff?">
+<title>Quanta: Coming Soon</title>
+<link rel="stylesheet" href="style.css">
 <link
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
   rel="stylesheet"
   integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
   crossorigin="anonymous">
 </link>
-<link href="style.css" rel="stylesheet"></link>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-<!-- SEO Stuffs -->
-<meta name="description" content="Website resmi Quanta, angkatan 2018 Fakultas Ilmu Komputer, Universitas Indonesia.">
-<title>QUANTA 2018</title>
-<meta name="robots" content="index,follow">
-<meta name="googlebot" content="index,follow">
-<meta name="keywords" content="Fasilkom,UI,UniversitasIndonesia,Universitas, Indonesia, Compfest, ICPC, Quanta, UIUX, IlmuKomputer, Fasilkom UI, Ilmu Komputer, Sistem Informasi, Computers Get Together, Compfest X, Compfest 11, Universitas Indonesia, SBMPTN, SNMPTN, Makara, Bis Kuning, Competitive Programming, ICPC">
-<meta name="google-site-verification" content="FV9juXoAuZnraXoVewuJNWki_taXfG-bHUKUvzTnnKo" />
+<link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
 </head>
-<!-- Isinya -->
-<body class="animated fadeIn">
-  <div class="mobile-block animated fadeInUp">
-    <div class="mobile-wrapper text-center">
-      <h1 class="mobile-text text-center"> <span></span></h1>
-      <img src="Assets/mobile.svg" style="width:50%;height:50%;">
-      <h1 class="mobile-text text-center" style="font-size:80%;"><b>Scroll at your own risk.</b></h1>
-      </div>
-    </div>
-	<!-- Ini Navbar -->
-	<div class="row">
-		<div class="col-sm-1">
-		</div>
-		<div class="col-sm-4" style="padding-top:1%;">
-      <nav class="navbar text-left" style="padding:0%;">
-        <a class="tekskecil navi navbar-brand text-center indah" href="#" target="_self" style="text-decoration:none;"><font color="black">Quanta</font></a>
-        <a class="tekskecil nav-item indah" style="padding-left:5% text-decoration:none;" href="https://docs.google.com/forms/d/e/1FAIpQLSeskTMdtX8cJpaF8ciZJjKrARTCvrVnZ2DGsmN_zCa4f0pcbQ/viewform?usp=pp_url" target="_blank"><font color="black">BBQ</font></a>
-        <a class="tekskecil nav-item indah" style="padding-left:5% text-decoration:none;" href="Biodata" target="_self"><font color="black">Biodata</font></a>
-        <a class="tekskecil nav-item indah" style="padding-left:5% text-decoration:none;" href="Gallery" target="_self"><font color="black">Gallery</font></a>
-      </nav>
-			<h1 class="kenangan" style="padding-top:25%;">Sebuah</h1>
-			<h1 class="kenangan">Kenangan</h1>
-			<h1 class="kenangan">Kebersamaan</h1>
-			<a href="#" target="_blank">
-			     <button type="button" name="button" class="button1">Saksikan</button>
-			</a>
-		</div>
-		<div class="col-sm-7" style="">
-			<img class="logoatas" src="Assets/toplogo.svg" alt="lol" style="float:right;">
-		</div>
-		<!-- Ini tagline homepage -->
-		<div class="row" style="padding-top: 133px; padding-left: 115px;">
-			<div class="col-lg-12">
-				<div class="container title">
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Ini asset samping -->
-	<div class="row">
-		<div class="col-sm-1 float-left">
-			<img class="blob2" src="Assets/blob2.svg" alt="">
-		</div>
-	</div>
-	<!-- Mulai sambutan -->
-	<div class="row" style="margin-top: -3%;">
-		<div class="col-sm-1">
-		</div>
-		<!-- Ini sambutannya -->
-		<div class="col-sm-4 float-left">
-			<h1 class="sambutan">Sambutan</h1>
-			<h1 class="sambutan">Ketua Angkatan</h1>
-			<p class="isisambutan" style="padding-top: 14%;">Assalamualaikum warahmatullahi wabarakatuh</p>
-			<p class="isisambutan">Salam sejahtera bagi Quanta, angkatan kita tercinta.</p>
-			<p class="isisambutan">Mari kita panjatkan syukur kepada Tuhan Yang Maha Kuasa karena berkat rahmat dan ridho-Nya lah kita dapat masuk universitas terbaik di Indonesia, berjas kuning dengan makara Biru-Merah. Kita berkumpul sebagai satu angkatan Quanta 2018. ..... <a href="Ketang" target="_self">read more</a></p>
-		</div>
-		<!-- Ini gambarnya -->
-		<div class="col-sm-6 float-right" style="">
-			<img src="Assets/fatih.png" alt="lol" style="width:52%; margin-left: 44%;">
-			<h1 class="namaketang" style="padding-top: 1%; margin-right:5%;">Fatih Ismail Alaydrus</h1>
-			<h1 class="ketang" style="margin-right: 5%;">Ketua Angkatan</h1>
-		</div>
-		<!-- Ini asset samping -->
-		<div class="col-sm-12" style="">
-			<img class="blob1" src="Assets/blob1.png" alt="lol" style="float:right;">
-		</div>
-	</div>
-		<!-- Ceitanya Sejarah -->
-	<div class="row" style="margin-top: 22%;">
-		<div class="col-sm-1">
-		</div>
-		<!-- Ini Baru Sejarah -->
-		<div class="col-sm-4 float-left">
-			<h1 class="sejarah">Sejarah</h1>
-			<p class="isisejarah" style="padding-top: 14%;">“Selamat, Anda diterima sebagai calon mahasiswa baru Universitas Indonesia”. Kalimat ini menandakan awal dari perjuangan kita di kampus perjuangan, Universitas Indonesia. Rasa haru, bangga, dan bahagia tentunya menjadi perasaan yang mendominasi pikiran kita saat melihat kalimat itu. Terlebih lagi, kita, tergabung dalam sebuah fakultas yang merupakan pencetus lahirnya ilmu komputer di Indonesia. Kakak-kakak adkesma CSUI mempersatukan kita untuk pertama kalinya dalam sebuah grup Line. Setelah memastikan semua awak kapal telah bergabung dalam bahtera CSUI 2018, kitapun bersiap menuju pertemuan perdana kita secara langsung. Tatap muka. Bukan melalui layar.</p>
-			<p class="isisejarah">INTEGER 2018. Di sanalah kita bertemu secara langsung. Bertempat di Pondok Laras, kita menyantap makan siang bersama sekaligus bermain bersama untuk pertama kalinya. Tawa, canda, dan cerita pertama berkumpul di momen itu. Momen pertama dan sekaligus yang akan selalu .... <a href="history" target="_self">read more</a></p>
-		</div>
-	</div>
-	<div class="row" style="margin-top: 10%">
-		<div class="col-sm-1">
-		</div>
-		<!-- ini untuk judul "makna logo" dan isi makna logo -->
-		<div class="col-sm-4 float-left">
-
-			<!-- judulnya -->
-			<h1 class="judulmakna">Makna Logo</h1>
-			<!-- isinya -->
-			<ul class="isimakna">
-				<li>Merah biru merupakan warna Fasilkom</li>
-				<li>Q yang terbentuk dari orbit atom merupakan inisial nama angkatan Quanta.</li>
-				<li>Quanta, bagaikan sebuah atom, ialah sebuah singularitas yang solid dan tidak bisa dibagi lagi.</li>
-				<li>Atom juga melambangkan titik awal dari sesuatu yang besar dan signifikan.</li>
-				<li>Tanda panah yang membentuk Q dan menghadap condong ke atas melambangkan pertumbuhan dan perkembangan teknologi yang tidak ada batas.</li>
-				<li>Elektron menandakan Industry 4.0</li>
-			</ul>
-		</div>
-		<div class="col-sm-12" style="margin-top: -38.2%">
-			<img class="quanta2" src="Assets/quanta2.svg" alt="lol">
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-1"></div>
-		<div class="col-sm-11" style="text-align: center; display: inline-block !important;">
-			<h1 class="judulmereka" style="margin-top: 0%">Kata mereka</h1>
-		</div>
-	</div>
-	<div class="row" style="margin-top: 5%;">
-		<div class="col-sm-2" style="margin-left: 6.5%;">
-			<ul class="list">
-				<li><img src="Assets/Zuhrah.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(221, 62, 62, 0.35);"></li>
-				<li class="katamereka">Bagian dari Hidup</li>
-				<li class="namamereka">Zuhrah</li>
-				<li class="jabatanmereka">Koordinator SI 2018</li>
-			</ul>
-		</div>
-		<div class="col-sm-2" style="margin-left: 3%;">
-			<ul class="list">
-				<li><img src="Assets/Anggardha.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(65, 182, 217, 0.28);"></li>
-				<li class="katamereka">Sukses terus Quanta!</li>
-				<li class="namamereka">Anggardha</li>
-				<li class="jabatanmereka">Koordinator Ilkom 2018</li>
-			</ul>
-		</div>
-		<div class="col-sm-2" style="margin-left: 3%;">
-			<ul class="list">
-				<li><img src="Assets/KaLuthfi.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(221, 62, 62, 0.35);"></li>
-				<li class="katamereka">Sukses!</li>
-				<li class="namamereka">Luthfi</li>
-				<li class="jabatanmereka">Ketua PMB 2018</li>
-			</ul>
-		</div>
-		<div class="col-sm-2" style="margin-left: 3%;">
-			<ul class="list">
-				<li><img src="Assets/KaIzzan.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(65, 182, 217, 0.28);"></li>
-				<li class="katamereka">Harapan</li>
-				<li class="namamereka">Izzan</li>
-				<li class="jabatanmereka">PJ Mentor PMB 2018</li>
-			</ul>
-		</div>
-	</div>
-	<div class="col-sm-3" style="padding-left: 85%;margin-top: -3%;">
-		<button onclick="topFunction()" class="buttontop" title="Go to top">Top</button>
-	</div>
-	<div class="banner" style="margin-top: -6%;">
-		<img src="Assets/bottombar.svg" class="bottombar">
-		<div class="col-sm-6">
-			<h1 class="teamwork">Teamwork. Excellence. We are Quanta.</h1>
-			<h2 class="whomade">Who made this cool website?</h2>
-		</div>
-		<div style="width: 100%;padding-left: 44%;padding-top: 4%;">
-			<a href="Team" target="_self">
-				<button type="button" name="button" class="buttonteam">The Team</button>
-			</a>
-		</div>
-	</div>
-</div>
+<body style="background-color:Black;" >
+<div class="container centered text-center">
+<p id="demo" class="text"></p>
 </body>
-
-<!-- Optional JavaScript -->
-
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script>
-function topFunction() {
-    document.body.scrollTop = 0;
-    document.documentElement.scrollTop = 0;
-}
-</script>
-<script
-  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous">
-</script>
-
-<script
-  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-  crossorigin="anonymous">
-</script>
-
-<script
-  src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-  crossorigin="anonymous">
+var countDownDate = new Date("Nov 16, 2018 14:00:00").getTime();
+var x = setInterval(function() {
+  var now = new Date().getTime();
+  var distance = countDownDate - now;
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+  document.getElementById("demo").innerHTML = days + " : " + hours + " : "
+  + minutes + " : " + seconds;
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "WELCOME TO ASTROWORLD.";
+  }
+}, 1000);
 </script>
