targetnya tadi salah

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div class="col-sm-4" style="padding-top:1%;">
       <nav class="navbar text-left" style="padding:0%;">
         <a class="tekskecil navi navbar-brand text-center indah" href="#" target="_self"><font color="black">Quanta</font></a>
-        <a class="tekskecil nav-item indah" style="padding-left:5%; text-decoration:none;" href="BBQ" target="_blank"><font color="black">BBQ</font></a>
+        <a class="tekskecil nav-item indah" style="padding-left:5%; text-decoration:none;" href="BBQ" target="_self"><font color="black">BBQ</font></a>
         <a class="tekskecil nav-item indah" style="padding-left:5%; text-decoration:none;" href="Biodata" target="_self"><font color="black">Biodata</font></a>
         <a class="tekskecil nav-item indah" style="padding-left:5%; text-decoration:none;" href="Gallery" target="_self"><font color="black">Gallery</font></a>
       </nav>
